docs/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: docs-svc-prod
spec:
  type: LoadBalancer
  selector:
    app: docs-deploy-prod
  ports:
    - name: http
      port: 80
      targetPort: 80
